# vantage-python

./: .gitignore  LICENSE  Makefile  README.md  autogen.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: pypi-publish.yml  test.yml
src/vantage/: __init__.py  _base.py  _types.py
src/vantage/_async/: __init__.py  client.py
src/vantage/_sync/: __init__.py  client.py
tests/: test_e2e.py
