[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage.py"
version = "0.1.0"
description = "Python SDK for the Vantage API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vantage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
