[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantage-python"
version = "0.3.2"
description = "Python SDK for the Vantage API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["vantage", "sdk", "client", "api", "cloud", "cost"]
authors = [{ name = "Vantage" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/vantage-sh/vantage-python"
Repository = "https://github.com/vantage-sh/vantage-python"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "twine>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vantage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
